# SysMonitor

./: CMakeLists.txt
Certificates/test1/: client  server  testC.cpp  testS.cpp  tmpS.cpp
Certificates/test2/: server  testC.cpp  testS.cpp
Client/: CMakeLists.txt
Client/include/: sys_info.h
Client/src/: client.cpp  sys_info.cpp
Server/: CMakeLists.txt
Server/include/: DatabaseHandler.h  DatabaseInitializer.h
Server/src/: DatabaseConnector.cpp  DatabaseHandler.cpp  DatabaseInitializer.cpp  DbStructure.cpp  main.cpp  server.cpp
